Estructura General Terminada

--- a/src/components/topBar.css
+++ b/src/components/topBar.css
@@ -1,11 +1,6 @@
   .ProjectTitle{
     margin-top: 1rem;
   }
-  
-  .TopBar {
-    background-color: white !important;
-  }
-  
   .Tools {
-    margin-left: 1rem
+    margin-left: 6rem;
   }
