--- a/src/components/previsualizacion/estilosvp.css
+++ b/src/components/previsualizacion/estilosvp.css
@@ -35,10 +35,14 @@
   }
 
   .cpdf {
-    padding: 50px 20px 20px 20px;
+    padding: 80px 20px 20px 20px;
   }
 
   .espacio {
     height: 100px;
     width: 100%;
+  }
+
+  .botonGuardar {
+    margin-top: 20px;
   }
